namespace OnlineGameTest {
    public static class CharacterAnimationString {
        // bool
        public static string IsGrounded = "IsGrounded";
        
        // float
        public static string YVelocity = "YVelocity";
        public static string Forward = "Forward";
        
        // trigger
        public static string RollTrigger = "Roll";
        public static string JumpTrigger = "Jump";
        public static string AttackTrigger = "Attack";
        
        // Layer
        public static string AttackLayer = "Attack";
    }

    public static class GunBitAnimationString {
        // Bool
        public static string Attack = "Attack";
    }
}